--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "proto:generate": "bash proto-gen.sh",
     "start:server": "node dist/server.js",
     "start:client": "node dist/client.js",
     "dev": "ts-node src/server.ts",
-    "dev1": "ts-node src/client.ts"
+    "dev1": "ts-node src/client.ts",
+    "gen:proto": "sh ./scripts/proto.sh"
   },
   "keywords": [],
   "author": "",
